# groups_relay

./: .gitignore  .taskmasterconfig  0001-Add-error-handling-test-and-improve-logging-in-integ.patch  CLAUDE.local.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  NOSTR_CLIENT_INTEGRATION.md  README.md  codecov.yml  compose.dev.yml  compose.prod.example.yml  compose.prod.yml  compose.yml  docker-compose.yml  justfile  prompt_plan.md  relay_nip29_notes.md  rust-toolchain.toml  spec.md  test_auth.sh  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: analyze-nip29.md
.cursor/rules/: nip29.mdc
.github/: codecov.yml
.github/workflows/: docker-publish.yml  profile-aggregator-docker.yml  rust.yml
.roo/rules/: backwards_callstack_debugging.md  nip29spec.md  refactoring.md  rust_commenting_best_practices.md  unstuck.md
benches/: event_sign.rs  event_verify.rs  middleware_comparison.rs
config/: settings.local.yml  settings.test.yml  settings.yml  strfry.conf
crates/groups_relay/: Cargo.toml
crates/groups_relay/benches/: event_sign.rs  event_verify.rs  middleware_comparison.rs
crates/groups_relay/config/: settings.local.yml  settings.yml
crates/groups_relay/src/: app_state.rs  config.rs  create_client.rs  error.rs  event_store_connection.rs  group.rs  groups.rs  handler.rs  lib.rs  main.rs  metrics.rs  metrics_handler.rs  middlewares.rs  nostr_database.rs  nostr_session_state.rs  relay_middleware_integration_tests.rs  relay_middleware_tests.rs  sampled_metrics_handler.rs  server.rs  subdomain.rs  subscription_manager.rs  test_utils.rs  utils.rs  websocket_server.rs
crates/groups_relay/src/groups/: group.rs
crates/groups_relay/src/middlewares/: error_handling_middleware.rs  event_store_middleware.rs  event_verifier.rs  logger_middleware.rs  nip_09_deletion.rs  nip_29_groups.rs  nip_29_middleware.rs  nip_40_expiration.rs  nip_42_auth.rs  nip_70_protected_events.rs  subscription_handler.rs  validation_middleware.rs
crates/groups_relay/src/relay_logic/: groups_logic.rs  mod.rs  public_logic.rs
crates/groups_relay/tests/: test_group_create_sequence.rs  test_join_request_debug.rs  test_middleware_replaceable_buffer_integration.rs  test_nostr_relay_builder_integration.rs  test_pagination_bug_all_cases.rs  test_pagination_bug_simulation.rs  test_replaceable_events_buffer.rs  test_role_merging_bug.rs  validation_middleware_test.rs
crates/load_tester/: Cargo.toml
crates/nostr_relay_builder/: Cargo.toml  README.md
crates/nostr_relay_builder/advanced_relay_db/: lock.mdb
crates/nostr_relay_builder/docs/: middleware_guide.md
crates/nostr_relay_builder/examples/: advanced_relay.rs  custom_middleware.rs  custom_state_relay.rs  minimal_relay.rs  private_relay.rs  production_relay.rs  subdomain_relay.rs
crates/nostr_relay_builder/minimal_relay_db/: lock.mdb
crates/nostr_relay_builder/src/: config.rs  crypto_worker.rs  database.rs  error.rs  generic_builder.rs  global_config.rs  global_metrics.rs  handlers.rs  lib.rs  logic_v2.rs  metrics.rs  middleware.rs  middleware_v2.rs  optimized_middleware.rs  optimized_processor.rs  relay_builder.rs  server.rs  state.rs  subscription_service.rs  test_utils.rs
crates/nostr_relay_builder/src/middlewares/: event_verifier.rs  generic_error_handling.rs  generic_event_verifier.rs  generic_logger.rs  logger.rs  metrics.rs  mod.rs  nip42_auth.rs
crates/nostr_relay_builder/tests/: error_handling_integration.rs  middleware_integration.rs
crates/websocket_builder/: Cargo.toml  README.md
crates/websocket_builder/benches/: simple_benchmark.rs  websocket_performance.rs
crates/websocket_builder/examples/: pipeline_demo.rs
crates/websocket_builder/src/: actor_websocket_handler.rs  lib.rs  message_handler.rs  middleware.rs  middleware_context.rs  websocket_builder.rs
crates/websocket_builder/tests/: actor_comparison_test.rs  error_handling_test.rs  integration_test.rs  unit_tests.rs  utils.rs
docs/: backpressure_alternatives.md  backpressure_investigation.md  broadcast_groups_plan.md  debugging_async_issues.md  debugging_production_issues.md  nip28.md  nip40_expiration.md  nip42.md  single_use_invites.md  subdomain_extraction..md
frontend/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.mts  vite.config.ts
frontend/src/: constants.ts  main.ts  main.tsx  style.css  types.ts  vite-env.d.ts
groups_relay/: Cargo.toml
groups_relay/src/: config.rs  create_client.rs  error.rs  event_store_connection.rs  groups.rs  handler.rs  lib.rs  main.rs  metrics.rs  nostr_database.rs  server.rs  (+3 more)
load_tester/: Cargo.toml
load_tester/src/: main.rs
profile_aggregator_standalone/: commit_changes.sh
scripts/: README.md  cleanup_relay_membership.sh  cleanup_relay_membership_db.sh  diagnose_network.sh  diagnose_server.sh  diagnose_tokio_console.sh  flow29.sh  flow29_test.sh  groups_relay_performance_test.sh  nostr_lmdb_scoped_api_prd.txt  profile.sh  run_flamegraph.sh  tag_image.sh  tag_latest_as_stable.sh  test_connection_performance.py  test_network_latency.js
src/: app_state.rs  config.rs  create_client.rs  database.rs  error.rs  event_store_connection.rs  group.rs  groups.rs  groups_event_processor.rs  handler.rs  lib.rs  main.rs  metrics.rs  metrics_handler.rs  middlewares.rs  nostr_database.rs  nostr_session_state.rs  relay_client_connection.rs  relay_middleware_integration_tests.rs  relay_middleware_tests.rs  sampled_metrics_handler.rs  server.rs  test_utils.rs  validation_middleware.rs
tests/: nip_42_auth_test.rs  test_group_create_sequence.rs  test_join_request_debug.rs  test_middleware_replaceable_buffer_integration.rs  test_nostr_relay_builder_integration.rs  test_replaceable_events_buffer.rs  test_role_merging_bug.rs  validation_middleware_test.rs
websocket_builder/: Cargo.toml  README.md
websocket_builder/src/: lib.rs  message_handler.rs  middleware.rs  middleware_context.rs  websocket_builder.rs
websocket_builder/tests/: error_handling_test.rs  integration_test.rs  utils.rs
(+55 files in other folders)
