[workspace]
# Note: While load_tester is only needed for testing and could be in optional-members,
# we keep it in members to prevent rust-analyzer from failing. Moving it to optional-members
# causes rust-analyzer to fail to load the workspace.
members = [
    "crates/groups_relay",
    "crates/websocket_builder",
    "crates/load_tester",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
futures-util = "0.3.31"
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-trait = "0.1.82"
tracing = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
clap = { version = "4.5.17", features = ["derive"] }
nostr-sdk = { git = "https://github.com/verse-pbc/nostr", branch = "master", features = ["all-nips"] }
nostr = { git = "https://github.com/verse-pbc/nostr", branch = "master", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
rand = "0.8.5"
tokio-tungstenite = "0.26.1"
heed = "=0.20.5"
