[workspace]
members = [
    "crates/groups_relay",
    "crates/websocket_builder",
    "crates/nostr_relay_builder",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
futures-util = "0.3.31"
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-trait = "0.1.82"
tracing = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
clap = { version = "4.5.17", features = ["derive"] }
nostr-sdk = { git = "https://github.com/verse-pbc/nostr", features = ["all-nips"] }
nostr = { git = "https://github.com/verse-pbc/nostr", features = ["std"] }
nostr-database = { git = "https://github.com/verse-pbc/nostr" }
nostr-lmdb = { git = "https://github.com/verse-pbc/nostr" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
rand = "0.8.5"
tokio-tungstenite = "0.26.1"
heed = "=0.20.5"
axum = { version = "0.7.9", features = ["ws", "http1"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
