[package]
name = "groups_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr_relay_builder = { path = "../nostr_relay_builder", features = ["axum"] }
websocket_builder = { path = "../websocket_builder" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
nostr-sdk = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rand = { workspace = true }
thiserror = "2.0.12"
indicatif = "0.17"

tokio-util = { version = "0.7.1", features = ["rt"] }
dashmap = "6.1.0"
config = "0.15.11"
axum = { workspace = true }
axum-server = "0.6.0"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
snafu = { version = "0.8.5", features = ["backtrace"] }
console-subscriber = { version = "0.4.1", optional = true }
tower-http = { workspace = true }
tower = { workspace = true }
nostr = { workspace = true, features = ["std"] }
nostr-database = { git = "https://github.com/verse-pbc/nostr" }
nostr-lmdb = { workspace = true }
time = { version = "0.3.37", features = ["local-offset", "macros"] }
humantime-serde = "1.1.1"
tracing-futures = "0.2.5"
once_cell = "1.20"

[features]
console = ["dep:console-subscriber"]

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
futures-util = "0.3.31"
pretty_assertions = "1.4.1"
tempfile = "3.14.0"
tokio-tungstenite = { workspace = true }

[[bench]]
name = "event_verify"
harness = false

[[bench]]
name = "event_sign"
harness = false

[[bench]]
name = "middleware_comparison"
harness = false
