[package]
name = "nostr_relay_builder"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Cadenas <daniel@nos.social>"]
description = "A framework for building custom Nostr relays with pluggable business logic and middleware support"
license = "MIT"
repository = "https://github.com/nostrosocial/groups_relay"
keywords = ["nostr", "relay", "websocket", "middleware"]
categories = ["network-programming", "web-programming::websocket"]
readme = "README.md"

[features]
default = []
axum = ["dep:axum", "axum-server", "tower-http", "tower"]

[dependencies]
websocket_builder = { path = "../websocket_builder" }
nostr-sdk = { workspace = true }
nostr = { workspace = true }
nostr-database = { workspace = true }
nostr-lmdb = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
snafu = { version = "0.8", features = ["backtrace"] }
async-trait = "0.1"
futures-util = "0.3"
rand = "0.8"
uuid = { version = "1.11", features = ["v4"] }
once_cell = "1.20"
flume = "0.11.1"
rustls = { version = "0.23", features = ["ring"] }
chrono = "0.4"

# Optional dependencies for the built-in server
axum = { workspace = true, optional = true }
axum-server = { version = "0.6", optional = true }
tower-http = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
# For server examples
axum = { workspace = true }
axum-server = "0.6"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[[example]]
name = "minimal_relay"
required-features = ["axum"]

[[example]]
name = "advanced_relay"
required-features = ["axum"]

[[example]]
name = "private_relay"
required-features = ["axum"]

[[example]]
name = "subdomain_relay"
required-features = ["axum"]

[[example]]
name = "custom_middleware"

[[example]]
name = "custom_state_relay"
required-features = ["axum"]

[[example]]
name = "production_relay"
required-features = ["axum"]


