[package]
name = "websocket_builder"
version = "0.1.0"
edition = "2021"

[lib]
name = "websocket_builder"


[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.82"
axum = { version = "0.7.9", features = ["ws"] }
futures-util = "0.3.31"
hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"] }
thiserror = "1.0.63"
tokio-util = { version = "0.7.1", features = ["rt"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tokio = { version = "1.38.1", features = ["full", "tracing"] }

[dev-dependencies]
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-tungstenite = { workspace = true }
pretty_assertions = "1.4.1"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
