[package]
name = "websocket_builder"
version = "0.1.0"
edition = "2021"

[lib]
name = "websocket_builder"


[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.82"
axum = { workspace = true }
futures-util = { workspace = true }
hickory-resolver = { version = "0.24.1", features = ["tokio-runtime"] }
thiserror = "1.0.63"
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-tungstenite = { workspace = true }
pretty_assertions = "1.4.1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
uuid = { version = "1.10", features = ["v4"] }
tracing-subscriber = "0.3"

[[bench]]
name = "websocket_performance"
harness = false

[[bench]]
name = "simple_benchmark"
harness = false

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
